<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_track_my_mobile" >
    
        <ListView
            android:id="@+id/listView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/lv1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true" >

        </ListView>
  <com.google.ads.AdView
    android:id="@+id/adView"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentRight="true"
    ads:adSize="BANNER"
    ads:adUnitId="a14fb0bbf452a8b"
    ads:loadAdOnCreate="true" >

</com.google.ads.AdView>

  <LinearLayout
      android:id="@+id/lv1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_above="@+id/adView"
      android:layout_alignParentLeft="true"
      android:weightSum="1.0" >

      <Button
          android:id="@+id/save"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight=".33"
          android:onClick="onClick"
          android:text="@string/ok"
          android:textSize="@dimen/buttentext_size" />

      <Button
          android:id="@+id/cancel"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight=".33"
          android:onClick="onClick"
          android:text="@string/cancel"
          android:textSize="@dimen/buttentext_size" />

      <Button
          android:id="@+id/selectall"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight=".33"
          android:onClick="onClick"
          android:text="@string/selectall"
          android:textSize="@dimen/buttentext_size" />
  </LinearLayout>

</RelativeLayout>